Fix some logic problems of XmlUtils